Initial work on replacing Brazil with Jetty